--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -119,7 +119,7 @@ The assignation of a sense consists in looking at each $tw$ instance represented
 
 ~
 
-\begin{algorithm}[t]
+\begin{algorithm}[]
 \SetAlgoLined
 \KwIn{A set $tw\_set=\{tw_1, tw_2, ..., tw_n\}$ of target words }
 \KwIn{A background linguistic network $G_H$}
