--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -116,6 +116,15 @@
   organization={Oxford}
 }
 
+@book{manning1999foundations,
+  title={Foundations of statistical natural language processing},
+  author={Manning, Christopher D and Sch{\"u}tze, Hinrich and others},
+  volume={999},
+  year={1999},
+  publisher={MIT Press}
+}
+
+
 
 @article{fabre2015,
   TITLE = {{Distributional Semantics Today Introduction to the special issue}},
@@ -132,6 +141,16 @@
   HAL_VERSION = {v1},
 }
 
+@unpublished{JurafskyM17,
+  author    = {Dan Jurafsky and
+               James H. Martin},
+  title     = {Speech and language processing: an introduction to natural language
+               processing, computational linguistics, and speech recognition, 3rd
+               Edition},
+  edition = {3rd},              
+  year      = {2017}
+addendum={Draft on webpage at \url{https://web.stanford.edu/~jurafsky/slp3/}}
+}
 
 
 @book{JurafskyM09,
@@ -140,6 +159,7 @@
   title     = {Speech and language processing: an introduction to natural language
                processing, computational linguistics, and speech recognition, 2nd
                Edition},
+  edition = {2nd},              
   series    = {Prentice Hall series in artificial intelligence},
   publisher = {Prentice Hall, Pearson Education International},
   year      = {2009}
@@ -192,6 +212,54 @@
   publisher = {Springer},
   year      = {2012}
 }
+
+@inproceedings{niwa1994co,
+  title={Co-occurrence vectors from corpora vs. distance vectors from dictionaries},
+  author={Niwa, Yoshiki and Nitta, Yoshihiko},
+  booktitle={Proceedings of the 15th conference on Computational linguistics-Volume 1},
+  pages={304--309},
+  year={1994},
+  organization={Association for Computational Linguistics}
+}
+
+
+@article{Church1990,
+ author = {Church, Kenneth Ward and Hanks, Patrick},
+ title = {Word Association Norms, Mutual Information, and Lexicography},
+ journal = {Comput. Linguist.},
+ issue_date = {March 1990},
+ volume = {16},
+ number = {1},
+ month = mar,
+ year = {1990},
+ issn = {0891-2017},
+ pages = {22--29},
+ numpages = {8},
+ acmid = {89095},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+
+
+@inproceedings{kiela2014systematic,
+  title={A systematic study of semantic vector space model parameters},
+  author={Kiela, Douwe and Clark, Stephen},
+  booktitle={Proceedings of the 2nd Workshop on Continuous Vector Space Models and their Compositionality (CVSC) at EACL},
+  pages={21--30},
+  year={2014}
+}
+
+@article{clark2015vector,
+  title={Vector space models of lexical meaning},
+  author={Clark, Stephen},
+  journal={Handbook of Contemporary Semantic Theory, The},
+  pages={493--522},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+
 
 @inproceedings{gensim,
         title = {{Software Framework for Topic Modelling with Large Corpora}},
@@ -405,6 +473,32 @@
   publisher={Springer}
 }
 
+@inproceedings{nivre2016universal,
+  title={Universal Dependencies v1: A Multilingual Treebank Collection.},
+  author={Nivre, Joakim and de Marneffe, Marie-Catherine and Ginter, Filip and Goldberg, Yoav and Hajic, Jan and Manning, Christopher D and McDonald, Ryan T and Petrov, Slav and Pyysalo, Sampo and Silveira, Natalia and others},
+  booktitle={LREC},
+  year={2016}
+}
+
+@inproceedings{schuster2016enhanced,
+  title={Enhanced English Universal Dependencies: An Improved Representation for Natural Language Understanding Tasks.},
+  author={Schuster, Sebastian and Manning, Christopher D},
+  booktitle={LREC},
+  year={2016}
+}
+
+
+@inproceedings{de2006generating,
+  title={Generating typed dependency parses from phrase structure parses},
+  author={De Marneffe, Marie-Catherine and MacCartney, Bill and Manning, Christopher D and others},
+  booktitle={Proceedings of LREC},
+  volume={6},
+  number={2006},
+  pages={449--454},
+  year={2006},
+  organization={Genoa Italy}
+}
+
 
 @InProceedings{Panchenko2017,
   author    = {Panchenko, A. and Faralli, S. and Ponzetto, S. P. and Biemann, C.},
@@ -420,6 +514,56 @@ year = "2010",
 publisher = "Wiley-Blackwell",
 
 }
+
+@book{Manning2008,
+ author = {Manning, Christopher D. and Raghavan, Prabhakar and Sch\"{u}tze, Hinrich},
+ title = {Introduction to Information Retrieval},
+ year = {2008},
+ isbn = {0521865719, 9780521865715},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+@book{jaccard1908nouvelles,
+  title={Nouvelles recherches sur la distribution florale},
+  author={Jaccard, P.},
+  series={Bulletin de la Soci{\'e}t{\'e} vaudoise des sciences naturelles},
+  url={https://books.google.fr/books?id=qn7SmgEACAAJ},
+  year={1908},
+  publisher={Impr. R{\'e}unies}
+}
+
+
+@techreport{de2008stanford,
+  title={Stanford typed dependencies manual},
+  author={De Marneffe, Marie-Catherine and Manning, Christopher D},
+  year={2008},
+  institution={Technical report, Stanford University}
+}
+
+
+@inproceedings{bird2006nltk,
+  title={NLTK: the natural language toolkit},
+  author={Bird, Steven},
+  booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
+  pages={69--72},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+
+
+@article{bender2013linguistic,
+  title={Linguistic fundamentals for natural language processing: 100 essentials from morphology and syntax},
+  author={Bender, Emily M},
+  journal={Synthesis Lectures on Human Language Technologies},
+  volume={6},
+  number={3},
+  pages={1--184},
+  year={2013},
+  publisher={Morgan \& Claypool Publishers}
+}
+
+
 
 @Article{clauset2008hierarchical,
   author       = {Clauset, Aaron and Moore, Cristopher and Newman, Mark EJ},
@@ -558,6 +702,16 @@ publisher = "Wiley-Blackwell",
   location  = {Oxford},
   publisher = {The Philological Society},
 }
+
+@article{levy2015improving,
+  title={Improving distributional similarity with lessons learned from word embeddings},
+  author={Levy, Omer and Goldberg, Yoav and Dagan, Ido},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={3},
+  pages={211--225},
+  year={2015}
+}
+
 
 @InProceedings{2011.DiMarco.Navigli.ClusteringWebSearch,
   author    = {Di Marco, Antonio and Navigli, Roberto},
@@ -979,6 +1133,31 @@ publisher = "Wiley-Blackwell",
   year={2014}
 }
 
+@article{bruni2014multimodal,
+  title={Multimodal distributional semantics.},
+  author={Bruni, Elia and Tran, Nam-Khanh and Baroni, Marco},
+  journal={J. Artif. Intell. Res.(JAIR)},
+  volume={49},
+  number={2014},
+  pages={1--47},
+  year={2014}
+}
+
+
+@inproceedings{Lin1997,
+ author = {Lin, Dekang},
+ title = {Using Syntactic Dependency As Local Context to Resolve Word Sense Ambiguity},
+ booktitle = {Proceedings of the Eighth Conference on European Chapter of the Association for Computational Linguistics},
+ series = {EACL '97},
+ year = {1997},
+ location = {Madrid, Spain},
+ pages = {64--71},
+ numpages = {8},
+ acmid = {979626},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
 
 @InProceedings{LevyG14,
   author    = {Omer Levy and Yoav Goldberg},
@@ -1081,6 +1260,16 @@ publisher = "Wiley-Blackwell",
   location  = {Uppsala, Sweden},
   url       = {http://www.aclweb.org/anthology/S10-1011},
 }
+
+@inproceedings{pado2003constructing,
+  title={Constructing semantic space models from parsed corpora},
+  author={Pad{\'o}, Sebastian and Lapata, Mirella},
+  booktitle={Proceedings of the 41st Annual Meeting on Association for Computational Linguistics-Volume 1},
+  pages={128--135},
+  year={2003},
+  organization={Association for Computational Linguistics}
+}
+
 
 @InProceedings{2007.Navigli.GraphConnectivity,
   author    = {Navigli, Roberto and Lapata, Mirella},
