--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -28,9 +28,12 @@
 \usepackage{makecell}
 \usepackage{aecompl}
 \usepackage{booktabs}
+\usepackage{caption}
 \usepackage{subcaption}
-% Glossary / list of abbreviations
 
+\usepackage{afterpage}
+% Glossary / list of abbreviations
+\usepackage{blindtext}
 \usepackage[intoc]{nomencl}
 \renewcommand{\nomname}{List of Abbreviations}
 
